[package]
name = "blessing-skin-shell"
description = "CLI Shell for Blessing Skin."
version = "0.1.0"
authors = ["Pig Fang <g-plane@hotmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/bs-community/blessing-skin-shell"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["wee_alloc"]

[dependencies]
ansi_term = "0.12"
combine = "4.0"
futures = "0.3"
js-sys = "0.3"
serde-wasm-bindgen = "0.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4", optional = true }

[dependencies.web-sys]
version = "0.3"
features = [
  'Response',
  'Window',
]

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
